# stash-copilot

./: .gitignore  CLAUDE.md  CONTEXT.md  GEMINI.md  LICENSE  README.md  STASH_PLUGIN_GUIDE.md  TODO.md  caption_ab_experiment_prompt.md  docker-compose.dev.yml  index.yml  package-lock.json  package.json  playwright.config.ts  poc_scene_structure.py  poc_smart_selection.py  pyproject.toml  requirements.txt  run-plugin.sh  standalone_embed.py  stash-copilot.css  stash-copilot.js  stash-copilot.py  stash-copilot.yml
.github/workflows/: ci.yml  claude-review.yml  claude.yml  release.yml
docker/media/: .gitkeep
docs/: REFERENCE.md  RELEASING.md  TESTING.md  phase-0-checklist.md  tag-taxonomy-proposal.html  tag-taxonomy-proposal.md
docs/adr/: 0001-swipe-preference-out-of-scope.md  0002-sqlite-not-graphql.md  0003-embeddings-stored-locally.md  0004-engagement-score-formula.md  0005-taste-map-producer-consumer.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/cleanup-2026-02-13/: database-schemas.md  features-table.md  mypy-baseline.md  phase-0-checklist.md
docs/diagrams/: architecture-post-cleanup.mmd
docs/final/: files-created.md  productionalization-report.md  test-suite-analysis.md
docs/phase-1/: DESIGN.md  architecture.md  database-schemas.md  features.md  performance-baseline.md
docs/phase-3/: architecture-proposal.md
docs/phase-4/: configuration-proposal.md
docs/phase-5/: duplicate-consolidation.md
docs/phase-6/: module-restructure-plan.md
docs/phase-7/: database-proposal.md
docs/phase-8/: git-organization.md
docs/plans/: 2025-01-24-frame-level-semantic-search-design.md  2025-01-24-frame-level-semantic-search.md  2026-02-02-multi-stage-vision-analysis-design.md  2026-02-03-multi-stage-vision-implementation.md  2026-02-03-multi-stage-vision-tasks.md  2026-02-04-content-detection-tool-design.md  2026-02-04-content-detection-tool-impl.md  2026-02-09-taste-map-design.md  2026-02-09-taste-map-implementation.md  2026-02-12-taste-map-3d-implementation.md  2026-02-12-taste-map-3d-redesign.md  2026-02-12-taste-map-camera-centering-design.md  2026-02-13-tag-gap-detection-design.md  2026-02-13-tag-gap-detection-implementation.md  2026-02-16-tag-suggestions-design.md  2026-02-16-tag-suggestions-implementation.md  2026-02-17-image-labeling-ui-design.md  2026-02-17-image-labeling-ui-implementation.md  2026-02-17-tag-deduplication-design.md  2026-02-17-tag-deduplication-implementation.md  2026-02-18-lora-dataset-design.md  2026-02-18-lora-dataset.md  2026-02-19-caption-dashboard-design.md  2026-02-19-caption-dashboard-implementation.md  2026-02-19-caption-pipeline-design.md  2026-02-19-caption-pipeline-implementation.md  2026-02-20-filmstrip-scene-cards-design.md  2026-02-20-filmstrip-scene-cards-implementation.md  2026-02-24-active-scene-grid-implementation.md  2026-02-24-active-scene-grid-redesign.md  2026-02-25-batch-api-design.md  2026-02-25-batch-api-implementation.md  2026-03-03-lora-training-system-design.md  productionalization-plan.md
docs/preference-trainer/: architecture.html  ui-wireframes.html
docs/rfcs/: 001-o-moment-embeddings.md
prompts/ask/: system.yaml
prompts/chat/: system.yaml
prompts/embed/: visual_description.yaml
prompts/stats/: summary.yaml
prompts/tags/: suggestion.yaml
prompts/vision/: description.yaml  system.yaml
scripts/: clear_vision_history.py  dev_stash_bootstrap.sh  package_plugin.sh  run_task.py
stash_ai/: __init__.py  agent.py  exceptions.py  stash_client.py
stash_ai/config/: __init__.py  defaults.py  legacy.py  settings.py
stash_ai/data/: __init__.py  aggregators.py  queries.py
stash_ai/embeddings/: __init__.py  base.py  config.py  frame_search.py  provider.py  storage.py  tag_vocabulary.py
stash_ai/eroscripts/: __init__.py  auth.py  client.py  download.py  metadata.py  query_builder.py
stash_ai/llm/: __init__.py  base.py  model_caps.py  provider.py
stash_ai/preferences/: __init__.py  model.py  pair_selector.py  session.py  types.py
stash_ai/prompts/: __init__.py  loader.py  statistics.py
stash_ai/recommendations/: __init__.py  cluster_engine.py  clusters.py  engagement.py  engine.py  performer_profile.py  performer_types.py  profile.py  types.py
stash_ai/tasks/: __init__.py  ask.py  chat.py  dense_frame_extractor.py  describe_performer.py  embed_cached_frames.py  embed_o_moments.py  embed_performers.py  embed_scenes.py  eroscripts_auth.py  eroscripts_download.py  eroscripts_search.py  eroscripts_status.py  frame_analysis.py  frame_extractor.py  frame_visualization.py  labeling.py  labeling_types.py  o_moment_extractor.py  preference_recs.py  recommendations.py  scene_vision.py  smart_frame_selector.py  stats_summary.py  tag_dedup.py  tag_gap_detection.py  tag_suggestions.py  taste_map.py  xml_parser.py
stash_ai/tools/: __init__.py  base.py  content_detection.py  database.py  embeddings.py  vision.py
tests/: __init__.py  conftest.py  test_preferences.py  test_stash_client_seam.py
tests/eroscripts/: test_client.py  test_download.py  test_metadata.py  test_query_builder.py
tests/fakes/: __init__.py  fake_stash_client.py
tests/fixtures/: __init__.py  mock_stash.py  sample_library.json  schema.py
tests/recommendations/: conftest.py  test_engagement.py
tests/tasks/: test_frame_extractor.py  test_labeling.py  test_o_moment_extractor.py  test_tag_suggestions.py
tests/tools/: __init__.py  conftest.py  test_api_budget.py  test_batch_api.py  test_caption_dashboard.py  test_caption_generator.py  test_caption_runner.py  test_constants.py  test_database_advanced.py  test_database_analytics.py  test_database_basic.py  test_database_entity.py  test_database_helpers.py  test_database_hierarchy.py  test_embeddings_enrich.py  test_enrich_scene_results.py  test_finalize_dataset.py  test_frame_selector.py  test_gemini_api.py  test_init_dataset.py  test_io_utils.py  test_openrouter_api.py  test_progress.py
tools/dataset/: api_budget.py  batch_api.py  build_clean_csv.py  caption_dashboard.html  caption_dashboard.py  caption_generator.py  caption_runner.py  caption_test_claude.py  (+12 more)
(+22 files in other folders)
