[project]
name = "stash-plugin-boilerplate"
version = "0.1.0"
description = "StashApp plugin with AI-powered library insights using LLMs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faiss-cpu>=1.7.4",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "open-clip-torch>=3.2.0",
    "pillow>=12.0.0",
    "pip>=25.3",
    "protobuf>=6.33.2",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "scikit-learn>=1.3.0",
    "sentence-transformers>=5.2.0",
    "sentencepiece>=0.2.1",
    "stashapp-tools>=0.2.59",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "numba>=0.60.0",
    "umap-learn>=0.5.7",
    "hf-transfer>=0.1.9",
    "plotly>=6.5.2",
]

[project.optional-dependencies]
# Stash tools for additional utilities
stash = [
    "stashapp-tools>=0.2.59",
]

# Ollama Python client (optional, we use requests by default)
ollama = [
    "ollama>=0.1.0",
]

# OpenAI provider support
openai = [
    "openai>=1.0.0",
]

# Anthropic provider support
anthropic = [
    "anthropic>=0.18.0",
]

# LiteLLM for unified provider interface
litellm = [
    "litellm>=1.0.0",
]

# All LLM providers
all-llm = [
    "ollama>=0.1.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "litellm>=1.0.0",
]

# CLIP via sentence-transformers (easiest setup)
clip = [
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
    "Pillow>=9.0.0",
]

# OpenCLIP (more model options)
openclip = [
    "open-clip-torch>=2.20.0",
    "torch>=2.0.0",
    "Pillow>=9.0.0",
]

# SigLIP via HuggingFace transformers
siglip = [
    "transformers>=4.35.0",
    "torch>=2.0.0",
    "Pillow>=9.0.0",
]

# All vision embedding providers
vision = [
    "sentence-transformers>=2.2.0",
    "open-clip-torch>=2.20.0",
    "transformers>=4.35.0",
    "torch>=2.0.0",
    "Pillow>=9.0.0",
    "peft>=0.12",
]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.14.0",
    "ruff>=0.8.0",
    # Type stubs for mypy
    "types-PyYAML>=6.0.0",
    "types-requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stash_ai"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

# ===== MYPY TYPE CHECKING =====
[tool.mypy]
# Match the runtime/CI interpreter (3.12). The codebase uses 3.11+ stdlib
# (e.g. datetime.UTC), so checking against 3.10 produced false positives.
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
show_error_codes = true
show_column_numbers = true
pretty = true

# Strict mode settings
strict = true
# These are included in strict but listed explicitly for clarity:
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_equality = true
strict_concatenate = true

# Paths to check
files = ["stash_ai", "stash-copilot.py"]
exclude = [
    "^tests/",          # Tests can be less strictly typed initially
    "^\\.venv/",        # Virtual environment
    "^venv/",           # Alternative venv name
    "^assets/",         # Asset files
]

# Per-module overrides for third-party libraries without stubs
[[tool.mypy.overrides]]
module = [
    "stashapi.*",
    "open_clip.*",
    "faiss.*",
    "sentence_transformers.*",
    "umap.*",
    "sklearn.*",
    "PIL.*",
    "plotly.*",
    "numba.*",
    "ollama.*",
    "openai.*",
    "anthropic.*",
    "litellm.*",
    "transformers.*",
]
ignore_missing_imports = true

# ===== RUFF LINTING & FORMATTING =====
[tool.ruff]
# Target Python version
target-version = "py310"

# Line length (same as Black default)
line-length = 100

# Exclude paths
exclude = [
    ".venv",
    "venv",
    "__pycache__",
    "assets",
    ".git",
    "build",
    "dist",
]

[tool.ruff.lint]
# Enable rule sets
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort (import sorting)
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # Ruff-specific rules
]

# Rules to ignore
ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Function call in default argument (common pattern)
    "B905",   # zip without strict= (Python 3.10+ only)
    "SIM108", # Ternary operator (can reduce readability)
    "TC001",  # Move import into TYPE_CHECKING block (not critical)
    "TC002",  # Move import into TYPE_CHECKING block (not critical)
    "TC003",  # Move import into TYPE_CHECKING block (not critical)
    "RUF003", # Ambiguous unicode character (multiplication sign is fine)
    "RUF005", # List concatenation vs unpacking - stylistic
    "RUF012", # Mutable class attribute default (handled by dataclasses)
    "RUF015", # Prefer next(iter()) over slice - stylistic
    "RUF022", # __all__ not sorted - not critical
    "SIM102", # Collapsible if - sometimes less readable
    "SIM105", # contextlib.suppress - try-except-pass is often clearer for cleanup
    "SIM113", # Use enumerate - stylistic
]

# Per-file ignores
per-file-ignores = { "poc_*.py" = ["C408", "E402", "F841", "RUF059"], "tests/**/*.py" = ["F841", "RUF059"], "standalone_embed.py" = ["RUF012", "SIM105"], "**/__init__.py" = ["F401", "UP035"] }

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
# isort configuration
known-first-party = ["stash_ai"]
force-single-line = false
combine-as-imports = true

[tool.ruff.format]
# Format like Black
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ===== PYTEST =====
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "strict"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
]
